# tree-sitter-scrapscript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-scrapscript.pc.in
bindings/c/tree_sitter/: tree-sitter-scrapscript.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_scrapscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterScrapscriptTests/: TreeSitterScrapscriptTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: scrapscript.txt
